src/tests/code/pass/pass_operator_combined_assignment_division.u
entrypoint:~()
{
	iErrorCode:~i64{4};
	foo:~f64{6.28};
	foo /=3.14;	// 2.0
	iErrorCode /= i64{foo};
}
->(iErrorCode)