src/tests/code/fail/fail_use_of_variable_before_its_definition.u
entrypoint:~()
{
	foo := 42;
	foo:i64{0};
}
->(foo)